Add V2 API, add V2 record delete and update
