# src/api/models/requests.go
@@ -17,7 +17,14 @@ const (
 )
 
 type SaveRowRequest struct {
-	Subdomain  string      `json:"subdomain" binding:"required"`
+	Subdomain  string      `json:"subdomain" default:""`
+	Data       string      `json:"data" binding:"required"`
+	Type       *RecordType `json:"type,omitempty" default:"A"`
+	TTL        *int        `json:"ttl,omitempty" default:"3600"`
+	Autocommit *bool       `json:"autocommit,omitempty" default:"false"`
+}
+
+type SaveRowRequestV2 struct {
 	Data       string      `json:"data" binding:"required"`
 	Type       *RecordType `json:"type,omitempty" default:"A"`
 	TTL        *int        `json:"ttl,omitempty" default:"3600"`
@@ -27,4 +34,8 @@ type SaveRowRequest struct {
 type DeleteRowRequest struct {
 	Subdomain  string `json:"subdomain" binding:"required"`
 	Autocommit *bool  `json:"autocommit,omitempty" default:"false"`
+}
+
+type DeleteRowRequestV2 struct {
+	Autocommit *bool `json:"autocommit,omitempty" default:"false"`
 }
